Java 11'isms